# FlyingRobotsLinLiweiLab

./: .gitignore  README.md  plot_gcode.py  thickened.stl
ESP32_PMW/: .gitignore  CMakeLists.txt  DOCS.md  README.md  plan.md  platformio.ini  progress.md  pyproject.toml  sdkconfig.adafruit_feather_esp32_v2
ESP32_PMW/.pio-core/: appstate.json
ESP32_PMW/ai/: README.md  analyze_coupling.py  compute_model_gains.py  coupling_matrix.py  design_hover_lqr.py  fit_mutual_inductance.py  fit_rlc_model.py  flight_controller.py  gen_coupling_experiment.py  gen_solo_sweep_experiment.py  hover_controller.json  hover_controller_runner.py  hover_model.py  json_schedule.py  picoscope_record.py  pid_autotune.py  pid_metrics.py  plot_coil_current_profiles.py  plot_cs_record.py  plot_freq_gain.py  plot_freq_response.py  plot_pid_log.py  plot_pid_tuning_matrix.py  plot_rms.py  plot_serial_log.py  record_serial.py  reference_profiles.py  requirements.txt  run_coupling_sweep.py  run_experiment.py  segment_rms.py  simulate_hover.py  tilt_metrics.py  trigger_reset_log.py  validate_resonance_model.py
ESP32_PMW/coil_tuning/: k-calibration.csv
ESP32_PMW/data/: README.md  cs_20260719_223543_part01.csv  cs_20260719_223543_part02.csv  cs_20260719_223543_part03.csv  cs_20260719_223543_part04.csv  cs_20260719_223543_part05.csv  cs_20260719_223543_part06.csv  cs_20260719_223543_part07.csv  cs_20260719_223543_part08.csv  reset_test_20260719_230603.csv  takeoff_1.csv
ESP32_PMW/devices/: 100uf_eeh-zc1h10_cap_eeh-zc_10p3x10p3_pan.txt  fdd8447l_package_to_sot_smd_to-252-2.txt  (+4 more)
ESP32_PMW/lib/: PMW.cpp  (+1 more)
(+470 files in other folders)
